layout issues with qr and logo and border.

--- a/eea/googlecharts/views/css/view.css
+++ b/eea/googlecharts/views/css/view.css
@@ -113,7 +113,7 @@ ul.googlechart_tabs li:first-of-type a:hover {
 /* Google Charts view */
 #googlechart_dashboard,
 .googlechart_dashboard {
-    box-shadow: 0px 5px 5px #ccc;
+    box-shadow: 0px 2px 2px #ccc;
     background: #FFFFFF;
     border-top: 1px solid #eee;
 }
@@ -325,10 +325,16 @@ ul.googlechart_tabs li:first-of-type a:hover {
 
 .googlechart_left_image {
     float: left;
+    padding-left: 0.5em;
 }
 
 .googlechart_right_image {
     float: right;
+    padding-right: 0.5em;
+}
+
+#googlechart_qr.googlechart_left_image {
+    padding: 0;
 }
 
 .googledashboard-widget {
